# Tarea_II_Datos_II

./: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
test/server/: card.cpp  game.cpp  game.h  linkedcard.cpp  linkedcard.h  linkedlist.cpp  linkedlist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  memory.h  runner.cpp  server.cpp  server.h  server.pro
test/testFiles/: card.cpp  card.h  game.h  memory.cpp  memory.h  mockReceiveMessages.h  mockSendMessages.h  qimage.cpp  qimage.h  receivemessages.cpp  receivemessages.h  sendmessages.cpp  sendmessages.h  server.cpp  server.h
